--- a/src/components/weather_backgrounds.css
+++ b/src/components/weather_backgrounds.css
@@ -1,34 +1,90 @@
 .thunderstorm {
-		background: url(../images/thunderstorm.jpg) no-repeat center center fixed;
+		background: url(../images/thunderstorm.jpg);
+		background-repeat: no-repeat;
 		background-size: cover;
+		display: block;
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		z-index: -1;
 }
 
 .rain {
-		background: url(../images/rain.jpg) no-repeat center center fixed;
+		background: url(../images/rain.jpg);
+		background-repeat: no-repeat;
 		background-size: cover;
+		display: block;
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		z-index: -1;
 }
 
 .snow {
-		background: url(../images/snow.jpg) no-repeat center center fixed;
+		background: url(../images/snow.jpg);
+		background-repeat: no-repeat;
 		background-size: cover;
+		display: block;
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		z-index: -1;
 }
 
 .flurries {
-		background: url(../images/flurries.jpg) no-repeat center center fixed;
+		background: url(../images/flurries.jpg);
+		background-repeat: no-repeat;
 		background-size: cover;
+		display: block;
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		z-index: -1;
 }
 
 .clear_sky {
-		background: url(../images/clear_sky.jpg) no-repeat center center fixed;
+		background: url(../images/clear_sky.jpg);
+		background-repeat: no-repeat;
 		background-size: cover;
+		display: block;
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		z-index: -1;
 }
 
 .cloudy {
-		background: url(../images/cloudy.jpg) no-repeat center center fixed;
+		background: url(../images/cloudy.jpg);
+		background-repeat: no-repeat;
 		background-size: cover;
+		display: block;
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		z-index: -1;
 }
 
 .partlycloudy {
-		background: url(../images/partlycloudy.jpg) no-repeat center center fixed;
+		background: url(../images/partlycloudy.jpg);
+		background-repeat: no-repeat;
 		background-size: cover;
+		display: block;
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		z-index: -1;
 }
